--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
-    "motion": "^12.31.0",
+    "motion": "^12.33.0",
     "next": "16.1.6",
     "nodemailer": "^8.0.0",
     "ogl": "^1.0.11",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.167.1"
   },
